k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gateway # match pods having this label
  template:
    metadata:
      labels:
        component: gateway
    spec:
      containers:
        - name: gateway
          image: tungdn3/recipeshare-gateway:0.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: gateway
  ports:
    - port: 8080
      targetPort: 8080
