k8s/search-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: search-api # match pods having this label
  template:
    metadata:
      labels:
        component: search-api
    spec:
      containers:
        - name: search-api
          image: tungdn3/recipeshare-search-api:0.0.6
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: search-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: search-api
  ports:
    - port: 8080
      targetPort: 8080
