k8s/search-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: search-db
  template:
    metadata:
      labels:
        component: search-db
    spec:
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: elk-azurefile
      containers:
        - name: search-db
          image: docker.elastic.co/elasticsearch/elasticsearch:8.7.1
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: db-storage
              mountPath: /usr/share/elasticsearch/data
              subPath: search
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: search-db-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: search-db
  ports:
    - port: 9200
      targetPort: 9200
