k8s/social-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: social-api # match pods having this label
  template:
    metadata:
      labels:
        component: social-api
    spec:
      containers:
        - name: social-api
          image: tungdn3/recipeshare-social-api:0.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: social-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: social-api
  ports:
    - port: 8080
      targetPort: 8080
